Update project structure

--- a/templates/index.html
+++ b/templates/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Tic Tac Toe</title>
-    <script type="text/javascript" src="./tic_tac_toe.js"></script>
+    <script type="text/javascript" src="{{ static_url('js/tic_tac_toe.js') }}"></script>
 </head>
 <body>
     <canvas width="300" height="300" id="game"></canvas>
