--- a/static/css/style.css
+++ b/static/css/style.css
@@ -39,12 +39,18 @@ section.game-controls > button {
   border-radius: 10px;
   color: #ffffff;
   background-color: #0048cc;
-  background-image: linear-gradient(to bottom, rgb(0, 148, 255), rgb(0, 72, 204));
+  background-image: -moz-linear-gradient(to bottom, #0094ff, #0048cc);
+  background-image: -webkit-linear-gradient(to bottom, #0094ff, #0048cc);
+  background-image: -o-linear-gradient(to bottom, #0094ff, #0048cc);
+  background-image: linear-gradient(to bottom, #0094ff, #0048cc);
   opacity: 0.6;
   text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.25);
-  transition: opacity 0.6s ease-out 0.1s;
   border: 1px solid #cccccc;
   border-color: rgba(0, 0, 0, 0.1) rgba(0, 0, 0, 0.1) rgba(0, 0, 0, 0.25) rgba(0, 0, 0, 0.25);
+  -webkit-transition: opacity 0.6s ease-out 0.1s;
+  -moz-transition: opacity 0.6s ease-out 0.1s;
+  -o-transition: opacity 0.6s ease-out 0.1s;
+  transition: opacity 0.6s ease-out 0.1s;
 }
 
 section.game-controls > button:hover {
