--- a/templates/index.html
+++ b/templates/index.html
@@ -5,6 +5,7 @@
     <title>Tic Tac Toe</title>
     <link rel="stylesheet" href="{{ static_url('css/style.css') }}" />
     <script type="text/javascript" src="{{ static_url('js/tic_tac_toe.js') }}"></script>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 <body>
   <section class="game-controls">
