--- a/templates/index.html
+++ b/templates/index.html
@@ -4,6 +4,9 @@
     <meta charset="UTF-8">
     <title>Tic Tac Toe</title>
     <link rel="stylesheet" href="{{ static_url('css/style.css') }}" />
+    <link rel="shortcut icon" href="{{ static_url('favicon.ico') }}" />
+    <link rel="icon" type="image/png" href="{{ static_url('img/tic_tac_toe_128.png') }}" />
+    <link rel="apple-touch-icon-precomposed" href="{{ static_url('img/tic_tac_toe_128.png') }}" />
     <script type="text/javascript" src="{{ static_url('js/tic_tac_toe.js') }}"></script>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
